--- a/index.html
+++ b/index.html
@@ -1,39 +1,178 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="ltr" lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>Adminmart Template - The Ultimate Multipurpose admin template</title>
+    <link href="assets/dataTables.bootstrap4.css" rel="stylesheet">
+    <link href="assets/style.min.css" rel="stylesheet">
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
+    <style>
+        .ns {
+            font-family: 'Noto Sans KR', sans-serif;
+        }
 
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-
+        .customBtnArea {
+            text-align: right;
+        }
+    </style>
 </head>
-<body>
 
+<body>
+<div class="preloader">
+    <div class="lds-ripple">
+        <div class="lds-pos"></div>
+        <div class="lds-pos"></div>
+    </div>
+</div>
+<div id="main-wrapper" data-theme="light" data-navbarbg="skin6" data-header-position="fixed" data-boxed-layout="full">
+    <header class="topbar" data-navbarbg="skin6">
+    </header>
+    <div class="page-wrapper">
+        <div class="container-fluid">
+
+            <div class="row">
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="card-title ns">자유게시판</h3>
+                            <div class="table-responsive">
+                                <table id="zero_config" class="table table-striped table-bordered no-wrap ns">
+                                    <thead>
+                                    <tr style="text-align: center">
+                                        <th>번호</th>
+                                        <th>작성자</th>
+                                        <th>제목</th>
+                                        <th>등록일</th>
+                                        <th>조회수</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    </tbody>
+                                </table>
+                            </div>
+
+                            <div class="customBtnArea">
+                                <button class="btn btn-outline-secondary ns" data-toggle="modal"
+                                        data-target="#writeBoardModal" type="button">글쓰기
+                                </button>
+                            </div>
+
+                            <ul class="pagination">
+
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- start of 글쓰기 modal -->
+    <div class="modal fade" id="writeBoardModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title ns" id="exampleModalLabel">글쓰기</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body register-board-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="regiModal-title" class="col-form-label">제목</label>
+                            <input type="text" class="form-control" id="regiModal-title">
+                        </div>
+                        <div class="row">
+                            <div class="col-8 col-sm-6">
+                                <div class="form-group">
+                                    <label for="regiModal-writer" class="col-form-label">작성자</label>
+                                    <input type="text" class="form-control" id="regiModal-writer">
+                                </div>
+                            </div>
+                            <div class="col-4 col-sm-6">
+                                <div class="form-group">
+                                    <label for="regiModal-password" class="col-form-label">비밀번호</label>
+                                    <input type="password" class="form-control" id="regiModal-password">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="regiModal-content" class="col-form-label">내용</label>
+                            <textarea class="form-control" id="regiModal-content" style="height: 200px"></textarea>
+                        </div>
+
+<!--                        <div class="form-group">-->
+<!--                            <label for="regiModal-attachment" class="col-form-label">첨부파일</label>-->
+<!--                            <input type="file" class="form-control" id="regiModal-attachment"></input>-->
+<!--                        </div>-->
+                        <hr>
+
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
+                    <button type="button" class="btn btn-primary" id="regiModal-registerBtn">등록</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end of 글쓰기 modal-->
+
+
+</div>
+
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossorigin="anonymous"></script>
+<script src="assets/popper.min.js"></script>
+<script src="assets/bootstrap.min.js"></script>
+<script src="assets/app-style-switcher.js"></script>
+<script src="assets/feather.min.js"></script>
+<script src="assets/perfect-scrollbar.jquery.min.js"></script>
+<script src="assets/sparkline.js"></script>
+<script src="assets/custom.min.js"></script>
+<script src="utils/boardUtil.js"></script>
+<script src="utils/pagingUtil.js"></script>
+<script src="utils/crudUtil.js"></script>
+<script src="utils/ajaxUtil.js"></script>
+<script src="variable.js"></script>
 
 <script>
 
-    $(document).ready(function(){
+    const API_Server = new URL("http://localhost:8080/");
+    var staticCurrPage;
+    var items;
 
-        console.log("안녕")
+    $(document).ready(()=>{
+        // 처음 page 로딩시 1페이지를 보여줌.
+        items = item();
+        firstLoading();
+        //movePage(1);
 
-        $.ajax({
-            url:"http://localhost:8080/sample/gettest",
-            type:"GET",
-            dataType: "json",
-            contentType: "application/json",
-            success: function(data) {
-                console.log("ajax호출 성공 ")
-                console.log(data);
-            }
-        }).done(function(data){
-            console.log("success는 아님")
+        $('#writeBoardModal').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget) // Button that triggered the modal
+            var modal = $(this)
+            //modal.find('.modal-body input').val(recipient)
         })
+
+        // regiModal-registerBtn
+
+
+
+
     })
-
-    console.log("안녕")
-
-
 </script>
 
+
 </body>
+
 </html>
